--- a/FE/pages/aboutus.html
+++ b/FE/pages/aboutus.html
@@ -40,31 +40,35 @@
 
             <div class="member-row">
                 <div class="member-name">
-                    <h3>姓名</h3>
-                    <p>工作</p>
+                    <h3>張杰宥</h3>
+                    <p>首頁、產品瀏覽介面及選單功能列</p>
                 </div>
                 <div class="member-experience">
-                    <p>心得</p>
+                    <p>
+                        在這次網頁專案中，我主要負責的是首頁、產品瀏覽介面，還有上方的選單功能列。首頁的部分，我希望使用者一進來就能看出這個網站是在賣甜點，所以在版面配置、顏色搭配和圖片呈現上都有特別注意，讓整體看起來乾淨又舒服。產品瀏覽介面則是讓我學到很多實作經驗，像是怎麼排商品卡片、怎麼分類蛋糕和麵包，才能讓使用者滑起來不會覺得亂。選單功能列雖然看起來簡單，但其實很重要，我負責把連結整理好，讓使用者可以很快找到想看的頁面。透過這次專案，我更熟悉 HTML 和 CSS 的用法，也發現做網頁不只是把功能做出來，還要考慮使用者看得順不順、用得方不方便。整體來說，這次專案對我來說是一次很實用、也很有收穫的經驗。
+                    </p>
                 </div>
             </div>
 
             <div class="member-row">
                 <div class="member-name">
-                    <h3>姓名</h3>
-                    <p>工作</p>
+                    <h3>林家懋</h3>
+                    <p>商品瀏覽介面及購物車</p>
                 </div>
                 <div class="member-experience">
-                    <p>心得</p>
+                    <p>在這次的專案當中，我主要是負責商品瀏覽介面及購物車的部分，而對於商品瀏覽的部分，我希望消費者在選購商品時可以有比較直覺的方式並且對於商品的內容可以快速的理解，所以對於排版以及分類的部分我花了好一番功夫，而對於購物車的部分，因為他需要使用到較多的程式語言，所以我在這個部分花了很久，因為我對於程式語言還不是那麼的熟悉，但是在經過組員的教學以及自己理解，還是成功把購物車介面做了出來，在景過這一次的專案後，我不僅對於html以及css的知識有增加，對於Java scripe也有不少的進步。</p>
                 </div>
             </div>
 
             <div class="member-row">
                 <div class="member-name">
-                    <h3>姓名</h3>
-                    <p>工作</p>
+                    <h3>黃威翔</h3>
+                    <p>會員註冊、登入及資料介面</p>
                 </div>
                 <div class="member-experience">
-                    <p>心得</p>
+                    <p>
+                    在本次網頁開發中，我負責會員註冊與登入介面的 HTML 撰寫。設計核心在於營造簡潔且具親和力的視覺感受，為了配合「甜點日常」的品牌調性，我選用了溫暖的咖啡色系與大面積留白。在技術實踐上，我重點處理了表單欄位的對齊與響應式佈局，確保在手機端也能擁有順暢的輸入體驗。此外，我也加入了「忘記密碼」與「返回首頁」的導覽連結，優化操作路徑。透過這次實作，我深刻體會到：一個好的登入頁面不只需功能正確，更要透過直覺的介面設計，降低使用者的心理負擔，從第一步就建立起對品牌的信任感。
+                    </p>
                 </div>
             </div>
 
