Wrap login button in a link to profile page

--- a/FE/pages/login.html
+++ b/FE/pages/login.html
@@ -26,7 +26,10 @@
                     <input type="password" id="password" placeholder="請輸入密碼">
                 </div>
                 
-                <button type="button" class="login-submit">登入</button>
+                <a href="profile.html">
+                    <button type="button" class="login-submit">登入</button>
+                </a>
+                
             </form>
 
             <div class="login-footer">
