--- a/FE/pages/forgot.html
+++ b/FE/pages/forgot.html
@@ -45,7 +45,12 @@
     </main>
 
     <footer class="main-footer">
-        <p>© 2025 甜點日常 版權所有</p>
+        <div class="footer-content">
+            <a href="aboutus.html"><p>關於我們</p></a>
+            <a href="center.html"><p>客服中心 </p></a>
+            <a href="wherer.html"><p>門市據點</p></a>
+            <p>© 2025 甜點日常 版權所有</p>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
